test/expected/explain_f2i_v-redef.out
explain void f(int x, int x)
                      ^
23: error: "x": redefinition of parameter
